<resources >
    <string name="app_name">SouthernNationalPark</string>
    <string name="app_topography">ลักษณะทั่วไป</string>
    <string name="app_climate">ลักษณะภูมิอากาศ</string>
    <string name="app_plant">พรรณพืชและสัตว์ป่า</string>
    <string name="app_place">ที่ตั้ง</string>
    <string name="app_advice">คำแนะนำ</string>
    <string name="app_feed">ข่าวอุทยานแห่งชาติ</string>
    <string name="app_map">แผนที่</string>
    <string name="hello_world">Hello world!</string>
   <string name="action_settings">Settings</string>
    <string name="general">อุทยานแห่งชาติในประเทศไทยบางแห่งเท่านั้นที่มีบ้านพักบริการ 
        ส่วนใหญ่จะมีที่กางเต็นท์พร้อมห้องสุขาและห้องอาบน้ำ บางแห่งมีร้านค้าร้านอาหาร บางแห่งยังอยู่ในระหว่างการจัดตั้งหรือปรับปรุง
         จึงอาจไม่มีสิ่งอำนวยความสะดวกใดๆ เลย ดังนั้นก่อนการเดินทางไป ท่องเที่ยวควรศึกษาข้อมูลของแต่ละอุทยานแห่งชาติให้ดี
          สำรองที่พักไม่ว่าจะเป็นบ้านพัก ค่ายพัก หรือพักแรมโดยเต็นท์ รวมทั้งกำหนดจุดหมายของการเดินทางไปท่องเที่ยวให้ชัดเจน
           เพื่อเตรียมสภาพร่างกายและอุปกรณ์การเดินทางให้ถูกต้อง </string>
    <string name="food">อุทยานแห่งชาติส่วนใหญ่มีร้านอาหารให้บริการ
         ผู้ที่ไม่นิยมการปรุงอาหารรับประทางเอง
          ก็สามารถฝากท้องไว้กับร้านอาหารในอุทยานแห่งชาติได้
           ส่วนบางอุทยานแห่งชาติที่ไม่มีร้านอาหาร
            นักท่องเที่ยวต้องเตรียมตัวสำหรับการทำอาหารเอง
             ซึ่งมิใช่เรื่องยาก อุปกรณ์ที่ต้องนำไป เช่น หม้อ กะทะ มีด เขียง จาน ช้อนส้อม ฯลฯ
              ที่สำคัญคือเตาแก๊สปิกนิก หรือเตาอั้งโล่พร้อมถ่าน 
              เพราะในเขตอุทยานแห่งชาติไม่อนุญาตให้ก่อไฟโดยใช้ฟืน
               ส่วนวัตถุดิบพวกอาหารสดอาหารแห้งสามารถหาซื้อก่อนที่จะเดินทางเข้าอุทยานแห่งชาติได้
                อย่างไรก็ตามควรติดต่อสอบถามกับอุทยานแห่งชาติว่ามีร้านอาหารบริการหรือไม่
                 และเปิดปิดเวลาเท่าไร บางแห่งแม้จะไม่มีร้านอาหาร 
                 แต่สามารถติดต่อให้แม่บ้านของอุทยานแห่งชาติช่วยจัดทำอาหารให้ได้ตามราคาที่ตกลงกัน</string>
   <string name="weather" > 
    อุทยานแห่งชาติแต่ละแห่งมีฤดูกาลท่องเที่ยวแตกต่างกัน
     บางแห่งไปเที่ยวช่วงฤดูหนาวจะสวยที่สุด บางแห่งไปเที่ยวช่วงฤดูร้อนสวยที่สุด
      ผู้สนใจจึงควรหาข้อมูลก่อนออกเดินทาง โดยเฉพาะอุทยานแห่งชาติทางทะเลที่
      เป็นหมู่เกาะกลางทะเลจะมีฤดูกาลท่องเที่ยวจำกัด เนื่องจากติดหน้าลมมรสุมในฤดูต่าง ๆ
       อุทยานแห่งชาติทางทะเลฝั่งอ่าวไทยกับฝั่งอันดามัน มีฤดูการท่องเที่ยวแตกต่างกัน
        หากไปผิดฤดู ก็ไม่สามารถหาเรือหรือเดินทางไปถึงอุทยานแห่งชาติได้
         สำหรับอุทยานแห่งชาติทางบก บางแห่งปิดไม่ให้ท่องเที่ยวในบางช่วงฤดูกาล
          เช่นที่ยอดดอยภูกระดึงของอุทยานแห่งชาติภูกระดึง แต่ส่วนใหญ่จะเปิดตลอดทั้งปี
           มีเพียงเรื่องการเดินทางเท่านั้น ที่อาจเป็นอุปสรรค โดยเฉพาะช่วงฤดูฝน
            เส้นทางเข้าอุทยานแห่งชาติบางแห่งอาจยากลำบากและทุรกันดาร ต้องอาศัยรถที่มีกำลังขับเคลื่อนสูง
             นอกจากนี้ในช่วงฤดูฝน ถ้ำและน้ำตกบางแห่งอาจไม่ปลอดภัยสำหรับการท่องเที่ยว
              เพราะมีน้ำไหลท่วมภายในถ้ำหรือน้ำป่าไหลหลากรุนแรงจนไม่เหมาะแก่การเล่นน้ำในบริเวณน้ำตก
              </string>
    <string name="uniform"> 
   สำหรับการไปเที่ยวอุทยานแห่งชาติที่เป็นป่าเขา 
   ควรใช้เสื้อผ้าสีเรียบ ๆ ที่กลมกลืนกับธรรมชาติ
    เช่น สีเทา สีน้ำเงิน สีเขียว สีน้ำตาล เป็นต้น
     เพราะหากเดินในเส้นทางศึกษาธรรมชาติและ
     จะช่วยให้มีโอกาสพบเห็นสัตว์ป่ามากขึ้น
      การสวมเสื้อแขนยาวและกางเกงขายาว
      จะช่วงป้องกันยุงและแมลงกัดต่อย รองเท้า
      ควรเป็นร้องเท้าหุ้มส้น อุทยานแห่งชาติ
      บางแห่งมีทากชุกชุม การสวมถุงเท้ากัน
      ทากจะช่วยให้ทากไม่สามารถกัดบริเวณเท้าของเราได้
  (แต่มันอาจไต่ไปกัดส่วนอื่น)นอกจากนี้ก็ควรมีหมวกไว้สวมกันแดด
   หนาม หรือแมลง สำหรับการไปเที่ยวอุทยานแห่งชาติทางทะเลแต่งกาย
   ด้วยชุดลำลองโปร่งสบาย อย่าลืมหมวกกันแดด ครีมกันแดด และแว่นกันแดด
    </string>
   <string name="dive">
       การดำผิวน้ำ เป็นวิธีการดำน้ำที่ลอยอยู่เหนือผิวน้ำ และมีหน้ากากและท่อสำหรับหายใจ
        เพื่อให้มองดูความสวยงามใต้ผิวน้ำได้อย่างชัดเจน เราต้องสวมชูชีพไว้เพื่อความปลอดภัย
         ซึ่งชูชีพจะช่วยให้ตัวเราลอยน้ำ วิธีการที่กล่าวมาทั้งหมดนี้เราเรียกว่าการดำน้ำแบบ 
     Skin Diving หรือ การดำผิวน้ำ หรือ Snorkeling หน้ากากที่เราใส่เรียกว่า
      Mask ท่อหายใจที่เราต้องคาบไว้เรียกว่า Snorkel ถ้ามีตีนกบด้วยจะยิ่งดีมากเพราะ
      	จะทำให้เราว่ายน้ำเคลื่อนตัวไปข้างหน้าได้ดีขึ้น
       </string>
   <string name="dive1">
       1. หน้ากาก ใช้สำหรับป้องกันไม่ให้น้ำเข้าตา ขณะที่เราจุ่มหน้าอยู่ใต้น้ำ
        ก่อนลงน้ำควรจะล้างกระจกหน้ากากให้สะอาดใสเพื่อที่เราจะได้มองเห็นโลกใต้น้ำแบบชัดเจน สดใสสวยงาม
         เมื่อเราดำน้ำไปสักพักหน้ากากจะเป็นฝ้าขุ่นมัว หรือบางครั้งมีน้ำรั่วเข้าไปบางส่วนซึ่งเราก็อาจจะจัดการกับปัญหานี้ด้วยการหยุดพัก
          และถอดหน้ากากออกล้างกับน้ำทะเล ก่อนที่จะสวมใส่และดำน้ำต่อไป 
   </string>
      <string name="dive2">
 2. ท่อหายใจ หรือ Snorkel ท่อหายใจนี้เราต้องคาบไว้ขณะที่ดำน้ำ
  เพื่อให้เรามีอากาศหายใจเมื่อหน้าเราจมอยู่ในน้ำ เพื่อมองดูโลกใต้น้ำและความสวยงามต่างๆ
   ปลายของท่อส่วนหนึ่งจะอยู่บนผิวน้ำ และเราต้องคาบปลายอีกด้านหนึ่งไว้เพื่อดูด อากาศบริสุทธิ์ที่อยู่เหนือผิวน้ำนั้นมาใช้ในการหายใจ
    โดยที่เราไม่ต้องเงยหน้าขึ้นมาจากผิวน้ำนั่นเอง 
      </string>
      <string name="dive3">
  3. ชูชีพ เป็นอุปกรณ์เพื่อความปลอดภัย 
   </string>
      <string name="scuba1">
1. ถังอากาศ เป็นอุปกรณ์ที่สำคัญที่สุด หน้าที่ของมันก็คือเก็บอากาศไว้สำหรับให้เราใช้หายใจเมื่ออยู่ใต้น้ำ
ถังอากาศมีหลายขนาดแต่ขนาดมาตรฐานคือ 11.5 ลิตร ถังหนึ่งจะดำได้นานประมาณ 40-50 นาทีในกรณีที่ดำไม่ลึกมาก
   </string>
   <string name="scuba2">
2. ชุดปรับความดันและสายช่วยหายใจ จากหัวถังเราจะต้องเอาชุดปรับความดันมาต่อ อากาศที่อัดมาในถังมีแรงดันมากกว่าความดันปกติรอบตัวเราประมาณ 200 เท่า
 ถ้าเราเปิดใช้โดยตรงจากหัวถังแรงดันจะสูงมาก จนก่อให้เกิดอันตรายได้ชุดปรับแรงดันนี้จะลดความดันสูงจากในถังให้เป็นความดันที่ต่ำพอเหมาะสำหรับการหายใจ
  และจากชุดปรับความดันก็จะมีสายเชื่อมต่อมาสำหรับเราใช้หายใจ
   </string>
      <string name="scuba3">

3. ชุดดำน้ำ หรือ Wet Suit ชุดดำน้ำมีหลายแบบทั้งแบบเสื้อเปียก Wet Suit และเสื้อแห้ง Dry Suit เสื้อเปียกคือชุดปกติของนักดำน้ำที่คนใส่ลงน้ำแล้วเปียก ส่วนเสื้อแห้งคนใส่ดำน้ำขึ้นมาแล้วตัวไม่เปียก ซึ่งเป็นชุดที่ใช้กรณีที่ดำน้ำในเขตน้ำเย็นจัดเท่านั้น
Wet Suit มีประโยชน์ในการช่วยปรับอุณหภูมิของร่างกาย เพราะเมื่อเราดำลึกลงไปใต้ผิวน้ำ ก็จะยิ่งหนาวมากขึ้นๆ Wet Suit เป็นฉนวนชนิดหนึ่ง ลักษณะเป็นฟองน้ำนิ่มๆ แต่เหนียว หนาประมาณ 2-3 มม. มีหน้าที่ป้องกันความร้อนจากตัวเราไม่ให้ถ่ายเทไปสู่น้ำมากเกินไป ช่วยให้เราไม่หนาวสั่นเมื่ออยู่ใต้น้ำนานๆ Wet Suit มีทั้งแบบขายาวแขนยาว และแบบขาสั้นแขนสั้น แบบสั้นก็ราคาถูกดี แบบยาวก็ป้องกันได้ดี
ซึ่ง Wet Suit ยังสามารถช่วยให้ลอยตัว และยังช่วยปกป้องผิวหนังเราในกรณีที่เราไปสัมผัสกับพืชหรือสัตว์มีพิษโดยบังเอิญอีกด้วย
   </string>
      <string name="scuba4">
4. ตีนกบ หรือเรียกว่า Fin ใช้เพื่อช่วยให้เราดำน้ำได้คล่องตัวมากขึ้น ตีนกบบางชนิดเหมือนตีนกบเลยทีเดียว แต่รุ่นใหม่ๆ จะออกแบบเหมือนหางปลาวาฬ ประโยชน์ของมันคือทำให้เรามีแรงส่งให้ว่ายน้ำได้เร็ว
          
   </string>
         <string name="scuba5">
5. เข็มขัดตะกั่ว ปกติแล้วคนเราจะไม่จมน้ำ เพราะปอดเป็นเหมือนลูกโป่งขนาดใหญ่ในร่างกายเรา ยิ่งเราใส่ Wet Suit ยิ่งทำให้ตัวเราลอยน้ำ ถึงแม้จะมีถังอากาศแบกอยู่บนหลังก็จะไม่จมไปใต้น้ำ แต่จะจมปริ่มน้ำ ดังนั้นเราจึงต้องหาของหนักๆ มาถ่วง เพื่อให้จมไปใต้น้ำ 
   </string>
            <string name="scuba6">
6. หน้ากากดำน้ำ หรือที่เรียกว่า Mask มีไว้เพื่อป้องกันน้ำทะเลเข้าตา และช่วยให้การมองเห็นใต้น้ำของเราดีขึ้น หน้ากากดำน้ำมีมากมายหลายแบบ บางแบบก็สามารถถอดเปลี่ยนใส่เลนส์สายตาได้ด้วย บางครั้งนักดำน้ำแบบ Scuba นิยมติด Snorkel ไว้ที่หน้ากากด้วยเพื่อที่จะใช้หายใจเมื่ออยู่บริเวณผิวน้ำ ทั้งนี้เพื่อประหยัดอากาศในถังที่เก็บไว้ใช้ใต้น้ำนั่นเอง 
   </string>
            <string name="rafting_title">
กิจกรรมการท่องเที่ยวท้าทายความสามารถ หนึ่งในกิจกรรมการท่องเที่ยวเชิงอนุรักษ์
 ถ้าคุณเป็นคนชอบความท้าทาย ชอบสัมผัสธรรมชาติ ชอบเดินป่าละก็ ล่องแก่งเป็น
 สิ่งที่คุณไม่ควรพลาด แก่งต่างๆที่มีอยู่ในประเทศไทยมีอยู่มากมาย มีตั้งแต่ง่ายมาก
 จนกระทั่งยากสุดๆ แที่สำคัญควรเตรียมพร้อมทั้งกำลังกาย และกำลังใจ ยิ่งถ้าจะให้สนุก
 ก็คงต้องไปกันเป็นกลุ่ม แต่ความปลอดภัยก็เป็นสิ่งที่ขาดไม่ได้ ดังนั้นก็ไม่ควรประมาท   
            </string>
            <string name="rafting1">
                1. ก่อนการล่องแก่งควรฝึกซ้อมทักษะการพายเรือ การถ่อเรือ การจับไม้พาย และการนั่งการทรงตัวในเรือเสียก่อน
            </string>
            <string name="rafting2">
                2. ควรมีความพร้อมในการเตรียมเครื่องป้องกันตัว โดยการสวมหมวกกันน๊อค เพื่อกันกระแทกบริเวณศรีษะ และเสื้อชูชีพเพื่อช่วยในการพยุงตัว หากเกิดหลุดจากแพ หรือเรือยาง
            </string>
            <string name="rafting3">
                3. ส่วนเสื้อผ้าควรสวมเสื้อแขนยาวและกางเกงขาสั้น รองเท้าที่สวมควรเป็นรองเท้าที่มีสายรัดข้อเท้า ไม่ควรสวมรองเท้าแตะ
            </string>
           <string name="rafting4">
                4. ในขณะล่องแก่ง ต้องปฏิบัติตามคำแนะนำของผู้บังคับหัวเรือและท้ายเรือที่ให้สัญญาณบอกสิ่งต่างๆที่เกิดขึ้น
            </string>
           <string name="rafting5">
                5. ควรมียาประจำตัวและยาสามัญประจำบ้านติดตัวไปด้วย
            </string>
            <string name="rafting6">
                6. ฝึกกำลังใจให้เต็มที่ และตั้งสติ พร้อมที่จะเผชิญกับปัญหาและอุปสรรคต่างๆในการล่องแก่ง
            </string>
            <string name="rafting_con">
                เรือยาง\nไม้พาย\nเสื้อชูชีพ\nหมวกกันน๊อค
            </string>
   <string name="wf_title">
       ผืนป่าอันบริสุทธิ์เป็นที่ใฝ่ฝันของนักผจญภัยผู้ชื่นชอบ
       ความท้าทาย มีเส้นทางเดินป่ามากมายที่ปลายทาง จุดหมายอาจเป็นน้ำตกงามที่
        ยังไม่เคยมีใครเข้าถึง หรือยอดเขาสูงเสียดฟ้าที่ผู้มีธาตุทรหดเท่านั้น
        จึงจะพิชิตได้ เส้นทางเหล่านี้อาจต้องเดินขึ้นเขาลูกแล้วลูกเล่าและ
        พักค้างแรมริมห้วยกลางป่าหลายคืน อาจดูยากลำบาก	สำหรับผู้
        ไม่เคยเดินป่าเช่นนี้มาก่อน แต่ความจริงหากเตรียมตัวให้พร้อม 
        ก็มิใช่เรื่องยากจนเกินไป
   </string>
   <string name="wf_information">
       ในเบื้องต้นคือการสอบถามข้อมูลการเดินทาง
       กับทางอุทยานแห่งชาติให้มากที่สุด ทั้งสภาพเส้นทาง สภาพอากาศ สภาพภูมิประเทศ
        แล้ววางแผนเส้นทางและระยะเวลาที่ใช้เดินและจุดหมายของแต่ละวัน
         พร้อมทั้งนัดหมายกับทางอุทยานแห่งชาติ เพื่อให้ทางอุทยานแห่งชาติ
         จัดเตรียมเจ้าหน้าที่นำทางไว้ล่วงหน้า สิ่งที่ต้องเตรียมต่อไปคือ สภาพร่างกาย
          ผู้จะเดินป่าควรมีร่างการแข็งแรงสมบูรณ์ และจิตใจที่พร้อมจะฝ่าฟันอุปสรรค
          ที่อาจพบตลอดการเดินทาง
   </string>
   <string name="wf1"><b>-</b>เดินเรื่อยๆ ไม่ต้องรีบและเดินด้วยความเร็วสม่ำเสมอ</string>
   <string name="wf2"><b>-</b>ควรเดินเรียงเดี่ยว ให้มองเห็นคนที่เดินอยู่ข้างหน้าเสมอ </string>
   <string name="wf3"><b>-</b>ไม่ควรส่งเสียงดัง นอกจากเปลีองพลังงานแล้ว ยังลดโอกาสพบสัตว์ป่าตามเส้นทาง</string>
   <string name="wf4"><b>-</b>ควรพัก 5ถึง10นาที ทุก 1ถึง2 ชม.แต่อย่าพักบ่อยเกินไป เพราะจะทำให้เหนื่อยยิ่งขึ้นไปอีก</string>
   <string name="wf5"><b>-</b>เมื่อพบแหล่งน้ำที่สามารถดื่มได้ ควรเติมน้ำให้เต็มกระติกเสมอ</string>
   <string name="wf6"><b>-</b>ไม่ควรเดินออกนอกเส้นทาง และไม่ควรเดินป่าตามลำพัง</string>
   <string name="photo_title">อุทยานแห่งชาติ เป็นสถานที่ที่มีทิวทัศน์สวยงาม
        ทั้งภูเขา ทะเลสาบ ทุ่งหญ้า ป่าเขียวขจี ต้นไม้ดอกไม้นานาพรรณ ตลอดจนสัตว์ป่าต่างๆ
         สิ่งเหล่านี้ล้วนทำให้ผู้มาเที่ยวอุทยานแห่งชาติ ปรารถนาจะบันทึกภาพไว้เป็นความทรงจำ</string>
   <string name="photo1"><b>-</b>อย่าเปลี่ยนแปลงสภาพธรรมชาติ เพียงเพื่อให้ได้ภาพที่สวยงาม</string>
   <string name="photo2"><b>-</b>พึงระลึกไว้เสมอว่าความสุขของสัตว์ป่าต้องมาก่อน หากการถ่ายภาพของเราจะเป็นการรบกวนกิจกรรมของสัตว์ป่านั้น ก็ควรยุติการถ่ายภาพเสีย เช่น นกที่กำลังทำรังวางไข่ หรือเลี้ยงลูกอ่อน</string>
</resources>