<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff8400"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/sv_step1_rafting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="กิจกรรมล่องแก่ง"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_rafting"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/rafting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rafting_title" />

            <ImageView
                android:id="@+id/img_rafting_one"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/raftings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="ข้อปฏิบัติในการล่องแก่ง"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rafting1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rafting2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rafting3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rafting4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rafting5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rafting6" />

            <ImageView
                android:id="@+id/img_rafting_two"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/raftingss" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="อุปกรณ์ที่ใช้ในการล่องแก่ง"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rafting_con" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>