<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1FFC1"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/sv_step1_rafting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="กิจกรรมการถ่ายภาพ"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/photo_title" />

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/photonew" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="ข้อพึงระวังการถ่ายภาพธรรมชาติและสัตว์ป่า"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/photo1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo2" />

            <ImageView
                android:id="@+id/img_photos"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/photos" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>